<?xml version="1.0"?>
<package format="2">
  <name>hps_camera</name>
  <version>0.0.1</version>
  <description>The Hypersen Lidar ROS package</description>

  <maintainer email="todo@todo.todo">xmba15</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>libpcl_all</exec_depend>

  <export>
  </export>
</package>
